<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="quantity_label">quantity</string>
    <string name="toppings_label">toppings</string>
    <string name="topping_1">Whipped cream</string>
    <string name="topping_2">Chocolate</string>
    <string name="quantity_text_view">1</string>
    <string name="order_button">order</string>
    <string name="send_email_button">send email</string>
    <string name="price_label">Order summary</string>
    <string name="price_text_view">$0</string>
    <string name="decrement_button">-</string>
    <string name="increment_button">+</string>
    <string name="toast_increment">Cannot order more than 10 coffees</string>
    <string name="toast_decrement">Cannot order less than 1 coffee</string>
    <string name="whipped_cream">Add whipped cream?  </string>
    <string name="chocolate">Add chocolate topping?  </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="email_subject">Coffee order from
        <xliff:g id= "userNameString" example="name">%1$s</xliff:g>
    </string>
</resources>
