<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sardegnaisoladicavalli.example.justjava.MainActivity">

    <TextView
        android:id="@+id/quantity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/paddingDp"
        android:layout_marginBottom="@dimen/paddingDp"
        android:layout_marginLeft="@dimen/paddingDp"
        android:layout_marginRight="@dimen/paddingDp"
        android:text="@string/quantity_label"
        android:textAllCaps="true"
        android:textColor="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/decrement_button"
            android:layout_width="@dimen/quantityPicker"
            android:layout_height="@dimen/quantityPicker"
            android:layout_marginLeft="@dimen/halfPaddingDp"
            android:layout_marginRight="@dimen/halfPaddingDp"
            android:text="@string/decrement_button"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:onClick="decrement"/>

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_text_view"
            android:textColor="@android:color/black"
            android:textSize="@dimen/fontSize"/>

        <Button
            android:id="@+id/increment_button"
            android:layout_width="@dimen/quantityPicker"
            android:layout_height="@dimen/quantityPicker"
            android:layout_marginBottom="@dimen/paddingDp"
            android:layout_marginLeft="@dimen/halfPaddingDp"
            android:layout_marginRight="@dimen/halfPaddingDp"
            android:text="@string/increment_button"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:onClick="increment"/>

    </LinearLayout>

    <TextView
        android:id="@+id/price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/paddingDp"
        android:layout_marginRight="@dimen/paddingDp"
        android:layout_marginBottom="@dimen/paddingDp"
        android:text="@string/price_label"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/fontSize"/>

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/paddingDp"
        android:layout_marginRight="@dimen/paddingDp"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="@dimen/fontSize"/>

    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/paddingDp"
        android:layout_marginLeft="@dimen/paddingDp"
        android:layout_marginRight="@dimen/paddingDp"
        android:layout_marginTop="@dimen/paddingDp"
        android:onClick="submitOrder"
        android:text="@string/order_button"
        android:textAllCaps="true"
        android:textColor="@android:color/black" />



</LinearLayout>
